@startuml diagrama_classes
skinparam backgroundColor #FFFFFF
skinparam defaultFontSize 13
title Diagrama de Classes - TP AEDS III

namespace project_utility {
    class Constants {
        + NAME_LEN, EMAIL_LEN, CPF_LEN : size_t
        + BTREE_PAGE_SIZE, BTREE_KEY_SIZE : size_t
        + FILE_MAGIC, FILE_VERSION : uint32_t
        + ACCEPTABLE_GRADE : uint8_t
    }
    class Enums {
        + RecStatus { Ativo, Deletado }
        + RecType { Student, Teacher, Subject }
    }
}

namespace project_model {

    class FileHeader {
        + magic : uint32_t
        + version : uint32_t
        + headerSize : uint32_t
        + chunkCount : uint32_t
        + nextStudentId, nextTeacherId, nextSubjectId : uint32_t
        + toBytes() : vector<byte>
        + fromBytes(data) : FileHeader {static}
    }

    class ChunkInfo {
        + type : char
        + offset : uint64_t
        + recordSize : uint32_t
        + capacity : uint32_t
        + used : uint32_t
        + toBytes() : vector<byte>
        + fromBytes(data) : ChunkInfo {static}
    }

    class BPlusTree {
        - rootPageId : int64_t
        - pageCount : size_t
        - entryCount : size_t
        + initialize(file, offset, pages) : bool
        + insert(key, value) : bool
        + search(key) : optional<BTreeLeafValue>
        + searchRange(prefix) : vector<pair>
        + erase(key) : bool
        - splitChild(parent, idx, child) : void
        - insertNonFull(node, key, value) : void
        - borrowOrMerge(parent, idx) : void
    }

    class BTreeLeafValue {
        + studentId : int32_t
        + subjectId : int32_t
        + teacherId : int32_t
        + grade : uint8_t
        + semester : char[12]
        + isApproved() : bool
    }

    class UserRecord {
        + status : char
        + type : char
        + userId : int32_t
        + password : uint16_t
        + name : char[50]
        + email : char[30]
        + cpf : char[15]
        + isActive() : bool
        + nameStr() : string
        + emailStr() : string
        + cpfStr() : string
    }

    class StudentRecord {
        + birthDate : uint32_t
        + courseName : char[30]
        + enrollmentYear : int32_t
        + courseStr() : string
    }

    class TeacherRecord {
        + department : char[30]
        + specialization : char[30]
        + hireDate : uint32_t
        + deptStr() : string
        + specStr() : string
    }

    class SubjectRecord {
        + status : char
        + type : char
        + subjectId : int32_t
        + name : char[50]
        + code : char[20]
        + credits : int32_t
        + teacherId : int32_t
        + isActive() : bool
        + nameStr() : string
        + codeStr() : string
    }

    class Student {
        + raw() : StudentRecord
        + fromBytes(data) : Student {static}
    }

    class Teacher {
        + raw() : TeacherRecord
        + fromBytes(data) : Teacher {static}
    }

    class Subject {
        + raw() : SubjectRecord
        + fromBytes(data) : Subject {static}
    }

    class Enrollment {
        + raw() : BTreeLeafValue
        + fromBytes(data) : Enrollment {static}
    }

    StudentRecord -up-|> UserRecord
    TeacherRecord -up-|> UserRecord
    Student --> StudentRecord
    Teacher --> TeacherRecord
    Subject --> SubjectRecord
    Enrollment --> BTreeLeafValue
    BPlusTree --> BTreeLeafValue
    BTreeLeafValue ..> Constants : uses
}

namespace project_controller {

    class FileManager {
        - recordSize_ : size_t
        + initialize(path) : bool
        + readRecord(index) : optional<byte[]>
        + appendRecord(data) : bool
        + markDeleted(index) : bool
    }

    class IndexValue {
        + chunkIndex : uint32_t
        + recordIndex : uint32_t
    }

    class IndexCtrl {
        - map_ : unordered_map<string, IndexEntry>
        + initialize(path) : bool
        + insert(key, chunkIdx, recIdx) : bool
        + lookup(key) : optional<IndexValue>
        + remove(key) : bool
        + nextId(prefix) : uint32_t
        + save() : bool
        + load() : bool
    }

    class LoginResult {
        + userId : int32_t
        + role : char
        + name : string
    }

    class DataManager {
        - dataFile_ : fstream
        - chunks_[4] : ChunkInfo
        - btree_ : BPlusTree
        - indexCtrl_ : IndexCtrl
        + initialize(dataDir) : bool
        + createStudent(...) : bool
        + readStudent(id) : optional<Student>
        + updateStudent(id, updated) : bool
        + deleteStudent(id) : bool
        + listAllStudents() : vector<Student>
        + createTeacher(...) : bool
        + readTeacher(id) : optional<Teacher>
        + updateTeacher(id, updated) : bool
        + deleteTeacher(id) : bool
        + listAllTeachers() : vector<Teacher>
        + createSubject(...) : bool
        + readSubject(id) : optional<Subject>
        + updateSubject(id, updated) : bool
        + deleteSubject(id) : bool
        + listAllSubjects() : vector<Subject>
        + enrollStudent(sid, bid, tid, sem) : bool
        + getEnrollment(sid, bid) : optional<Enrollment>
        + getEnrollmentsByStudent(sid) : vector<Enrollment>
        + getEnrollmentsBySubject(bid) : vector<Enrollment>
        + unenroll(sid, bid) : bool
        + updateGrade(sid, bid, grade) : bool
        + login(cpf, password) : optional<LoginResult>
        + getLastError() : string
        + getActiveCount(type) : int32_t
        - reallocateChunk(ci) : bool
        - computeChunkOffsets() : void
    }

    DataManager --> BPlusTree
    DataManager --> IndexCtrl
    DataManager --> ChunkInfo
    DataManager --> FileHeader
    DataManager --> LoginResult
}

FileHeader ..> Constants : uses
ChunkInfo ..> Constants : uses
@enduml
